##Text encoding: utf-8

2016-02-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/brackets.cc: fix embedding of a whole molecule. [#47224]
	* plugins/paint/selection/bracketstool.cc: fix spacings.

2016-02-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* all: made gcu::Object::GetYAlign() const.

2016-02-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reactant.h: make reaction export to .cdx possible.
	* libs/gcp/reaction-prop.cc: ditto.
	* libs/gcp/reaction-prop.h: ditto.
	* plugins/loaders/cdx/cdx.cc: export reactions.

2016-02-20  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/arrow.cc: export graphic objects to .cdx.
	* libs/gcp/arrow.h: ditto.
	* libs/gcp/reaction-operator.cc: ditto.
	* libs/gcp/reaction-operator.h: ditto.
	* libs/gcp/reaction-step.cc: improve operator position.
	* libs/gcp/text.cc: enhance position preision on export.
	* libs/gcu/atom.cc: ditto.
	* plugins/loaders/cdx/cdx.cc: export graphic objects.

2016-02-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/text.cc: ensure font family is correctly exported.
	* plugins/loaders/cdx/cdx.cc: save theme and fix various text export issues.

2016-02-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/document.cc: fix build with gcc-6 (and potential crasher).
	[Redhat bug #1307546]
	* plugins/loaders/cdx/cdx.cc: fix exported text position.

2016-02-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.cc: fixd crasher.
	* libs/gcp/text.cc: add GetProperty() to allow for text export.
	* libs/gcp/text.h: ditto.
	* plugins/loaders/cdx/cdx.cc: partial implementation of text export.
	* plugins/loaders/cml/cml.cc: typo.

2016-02-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/table/gchemtable-app.cc: fixed typos. [#47081]
	* programs/table/gchemtable-curve.cc: ditto.
	* programs/table/gchemtable-data.cc: ditto.

2016-02-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: fixed text vertical position.