@@ -1,6 +1,7 @@
 [Desktop Entry]
 Version=1.0
-_Name=Gnome Crystal Crystalline Structures Viewer@STABILITY_POSTFIX@
+Name=GCrystal@STABILITY_POSTFIX@
+_GenericName=Crystalline Structures Viewer@STABILITY_POSTFIX@
 _Comment=Edit and display crystalline structures
 Exec=gcrystal-@GCU_API_VER@ %U
 Icon=gcrystal
@@ -9,3 +10,4 @@ Type=Application
 DocPath=gcrystal/gcrystal.xml
 Categories=GTK;GNOME;Education;Science;Chemistry;
 MimeType=application/x-gcrystal;chemical/x-cif;chemical/x-cml;
+_Keywords=chemistry;3D;display;crystal;printer;
