@@ -1,9 +1,11 @@
 [Desktop Entry]
 Version=1.0
-_Name=Periodic table of the elements@STABILITY_POSTFIX@
+Name=GChemTable@STABILITY_POSTFIX@
+_GenericName=Periodic table of the elements@STABILITY_POSTFIX@
 _Comment=A Mendeleiev table of the chemical elements
 Exec=gchemtable-@GCU_API_VER@
 Icon=gchemtable
 Terminal=false
 Type=Application
 Categories=GTK;GNOME;Education;Science;Chemistry;
+_Keywords=chemistry;Mendeleiev;periodic table;
